<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/md_grey_850">

    <LinearLayout
        android:id="@+id/create_account_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="AddAccountFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acc_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/acc_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/acc_password_input"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acc_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/acc_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:nextFocusForward="@id/acc_password_confirm_input"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acc_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/acc_password_confirm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:nextFocusForward="@id/acc_termsofservice_checkbox"
                android:hint="@string/confirm_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/acc_termsofservice_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:nextFocusForward="@id/acc_is_over_18_checkbox"
            android:text="@string/termsofservice_accept"/>

        <CheckBox
            android:id="@+id/acc_is_over_18_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:nextFocusForward="@id/confirm_button"
            android:text="@string/i_am_over_eighteen"/>

        <CheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/register_new_account"
            android:nextFocusForward="@id/confirm_button"
            android:nextFocusDown="@id/confirm_button"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/enter"/>

    </LinearLayout>

</ScrollView>