...
    <!-- regular strings -->
    <string name="my_profile">My Profile</string>
    <string name="my_diary">My Diary</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="hello_plus_comma">Hello,</string>
    <string name="add_an_account">Add an account</string>
    <string name="guest">Guest</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inbox">Inbox</string>
    <string name="settings">Settings</string>
    <string name="go_to">Go to…</string>
    <string name="register_new_account">Register new account</string>
    <string name="email">E-Mail</string>
...
    <string name="next_steps">Next steps</string>
    <string name="registered_please_confirm_mail">Registration complete! Please check your email and follow activation instructions.</string>
    <string name="nickname">Nickname</string>
    <string name="birthday_dd_mm">Birthday: YYYY-MM-DD</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="create_new">Create new</string>
    <string name="new_profile">New profile</string>
    <string name="no_profiles_create_one">No profiles found for this account, create one?</string>
    <string name="confirm_action">Confirm action</string>
    <string name="confirm_profile_deletion">Confirm profile deletion. Warning: diary and all entries belonging to this profile will be deleted by this action!</string>
    <string name="confirm">Confirm</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="switch_profile">Switch profile</string>
    <string name="remove_profile">Remove profile</string>
    <string name="profile_created">Profile created</string>
    <string name="add_profile">Add profile</string>
    <string name="create_blog">Create blog</string>
    <string name="blog_address" translatable="false"><![CDATA[dybr.ru/<address>]]></string>
    <string name="blog_title">Blog title</string>
    <string name="blog_created">Blog created</string>
    <string name="add_blog">Add blog</string>
    <string name="my_blog">My Blog</string>
...
