...
                android:padding="16dp"
                android:text="@string/hello_plus_comma"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/current_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-27dp"
                android:layout_marginLeft="-27dp"
                android:padding="16dp"
                android:text="@string/guest"
...

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/accounts_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_grey_900"
        android:orientation="vertical">

        <LinearLayout
...
